--- a/buoi03_250819/python101_ST3.ipynb
+++ b/buoi03_250819/python101_ST3.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOojoNvQ4/4f4dPUjgVeEOC",
+      "mount_file_id": "1Np8Jy7t8YRsbZrTGrr6Lgv9Xecg734pF",
+      "authorship_tag": "ABX9TyOi1j72HD7Be4OQLEM065hi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +28,132 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Python 101"
+      ],
       "metadata": {
-        "id": "yjhmTgzbzNei"
+        "id": "AylQcbff0O2U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Trình biên dịch (compiler) vs. Thông dịch"
+      ],
+      "metadata": {
+        "id": "0N5TGehO0aWb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile first.cpp\n",
+        "#include <stdio.h>\n",
+        "int main(void) {\n",
+        "  int a=27, b=6, c;\n",
+        "  c = a%b;\n",
+        "  printf(\"The value of c is %d.\\n\", c);\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RBsSv5AM0Xl_",
+        "outputId": "32606683-5512-440e-9beb-ccbe2014617e"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing first.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat first.cpp\n",
+        "print(\"-\"*50)\n",
+        "\n",
+        "print('Compile...')\n",
+        "!gcc first.cpp -o first\n",
+        "!ls\n",
+        "\n",
+        "print(\"-\"*50)\n",
+        "print('Execute...')\n",
+        "!./first"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "we1GY37x0vmh",
+        "outputId": "44395257-98bd-4f06-aedf-df12dfe9de5c"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "#include <stdio.h>\n",
+            "int main(void) {\n",
+            "  int a=27, b=6, c;\n",
+            "  c = a%b;\n",
+            "  printf(\"The value of c is %d.\\n\", c);\n",
+            "  return 0;\n",
+            "}\n",
+            "--------------------------------------------------\n",
+            "Compile...\n",
+            "drive  first  first.cpp  sample_data\n",
+            "--------------------------------------------------\n",
+            "Execute...\n",
+            "The value of c is 3.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile first.py\n",
+        "a = 27\n",
+        "b = 6\n",
+        "c = a%b;\n",
+        "print(\"The value of c is %d.\\n\"% c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FiuvrInu1NZF",
+        "outputId": "6ba9a221-5325-46d0-8a0a-9968b978da3a"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing first.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Kết thúc"
+      ],
+      "metadata": {
+        "id": "nuydfLVW0Tre"
+      }
     }
   ]
 }
