--- a/buoi03_250819/python101_ST3.ipynb
+++ b/buoi03_250819/python101_ST3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Np8Jy7t8YRsbZrTGrr6Lgv9Xecg734pF",
-      "authorship_tag": "ABX9TyOi1j72HD7Be4OQLEM065hi",
+      "authorship_tag": "ABX9TyOlymJ3UQ8ILiK4z4vzhgYu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,6 +147,242 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!cat first.py\n",
+        "print(\"-\"*50)\n",
+        "print(\"Interpret...\")\n",
+        "%run first.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EqjFaJDS1hwJ",
+        "outputId": "ab37c39b-2415-4478-9965-69a91b973524"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a = 27\n",
+            "b = 6\n",
+            "c = a%b;\n",
+            "print(\"The value of c is %d.\\n\"% c)\n",
+            "--------------------------------------------------\n",
+            "Interpret...\n",
+            "The value of c is 3.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a, b, c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AN1y0Fkz1whm",
+        "outputId": "8b9a6528-71a9-462a-b406-fa6b8ad6b4bd"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "27 6 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ngôn ngữ lập trình"
+      ],
+      "metadata": {
+        "id": "8_qbVHKV4c0w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import display"
+      ],
+      "metadata": {
+        "id": "2KN4kCC14mSB"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello, World!\")\n",
+        "display('Hello, World!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "ebsF51tB4bBr",
+        "outputId": "87c2789e-e148-4af8-b1f4-ddd180026ac8"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, World!\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "'Hello, World!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# comment\n",
+        "'''\n",
+        "comment\n",
+        "'''\n",
+        "print('comment')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1QmH_H-e45sT",
+        "outputId": "ecba2a90-1513-44c3-d097-fc55fac2f97a"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "comment\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# indent\n",
+        "score = 80\n",
+        "if score >= 60:\n",
+        "  print(\"Pass\")\n",
+        "  pass # dummy"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hpVXG4_m6gRt",
+        "outputId": "d1d9f6a6-57b9-4e38-8f3c-288d0d2e2249"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pass\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# variable\n",
+        "x = 2\n",
+        "print(x, type(x))\n",
+        "\n",
+        "price = 2.5\n",
+        "print(price, type(price))\n",
+        "\n",
+        "word = 'Hello'\n",
+        "word = \"Hello\"\n",
+        "print(word, type(word))\n",
+        "\n",
+        "word = \"\"\"\n",
+        "Hello\n",
+        "\"\"\"\n",
+        "print(word, type(word))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q8-RR0rG7CBK",
+        "outputId": "ceba974a-e321-4a56-a5f2-5919bca46d21"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 <class 'int'>\n",
+            "2.5 <class 'float'>\n",
+            "Hello <class 'str'>\n",
+            "\n",
+            "Hello\n",
+            " <class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 2\n",
+        "y = x + 1\n",
+        "print(f'x = {x}, y = {y}')\n",
+        "print('x = %d, y = %d'%(x, y))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HJbI-YBQ7rMH",
+        "outputId": "74e39183-2815-4cce-9210-fcae9dce9b58"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 2, y = 3\n",
+            "x = 2, y = 3\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Kết thúc"
@@ -154,6 +390,15 @@
       "metadata": {
         "id": "nuydfLVW0Tre"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-0YJS1r87APV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
