--- a/buoi03_250819/python101_ST3.ipynb
+++ b/buoi03_250819/python101_ST3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Np8Jy7t8YRsbZrTGrr6Lgv9Xecg734pF",
-      "authorship_tag": "ABX9TyOlymJ3UQ8ILiK4z4vzhgYu",
+      "authorship_tag": "ABX9TyMyqVi/BgNbIUresmZsPkMo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,29 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "metadata": {
+        "id": "b9NjPr6KMZuj",
+        "outputId": "98395b1e-91a4-41e6-8d8a-832859307f56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "first.cpp  sample_data\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Trình biên dịch (compiler) vs. Thông dịch"
@@ -62,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RBsSv5AM0Xl_",
-        "outputId": "32606683-5512-440e-9beb-ccbe2014617e"
+        "outputId": "d9837559-0c6b-4fbf-c63a-4e9221e28546"
       },
       "execution_count": 1,
       "outputs": [
@@ -96,7 +119,7 @@
         "id": "we1GY37x0vmh",
         "outputId": "44395257-98bd-4f06-aedf-df12dfe9de5c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +158,7 @@
         "id": "FiuvrInu1NZF",
         "outputId": "6ba9a221-5325-46d0-8a0a-9968b978da3a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +184,7 @@
         "id": "EqjFaJDS1hwJ",
         "outputId": "ab37c39b-2415-4478-9965-69a91b973524"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +214,7 @@
         "id": "AN1y0Fkz1whm",
         "outputId": "8b9a6528-71a9-462a-b406-fa6b8ad6b4bd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,7 +242,7 @@
       "metadata": {
         "id": "2KN4kCC14mSB"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +259,7 @@
         "id": "ebsF51tB4bBr",
         "outputId": "87c2789e-e148-4af8-b1f4-ddd180026ac8"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +298,7 @@
         "id": "1QmH_H-e45sT",
         "outputId": "ecba2a90-1513-44c3-d097-fc55fac2f97a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +325,7 @@
         "id": "hpVXG4_m6gRt",
         "outputId": "d1d9f6a6-57b9-4e38-8f3c-288d0d2e2249"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +362,7 @@
         "id": "q8-RR0rG7CBK",
         "outputId": "ceba974a-e321-4a56-a5f2-5919bca46d21"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +393,7 @@
         "id": "HJbI-YBQ7rMH",
         "outputId": "74e39183-2815-4cce-9210-fcae9dce9b58"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
